--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyAlYTDtmHd5ebKMonZUo7lnweOzDdBo40E",
-    authDomain: "myquiz-game.firebaseapp.com",
-    databaseURL: "https://myquiz-game-default-rtdb.firebaseio.com",
-    projectId: "myquiz-game",
-    storageBucket: "myquiz-game.appspot.com",
-    messagingSenderId: "135491178213",
-    appId: "1:135491178213:web:7fd97cb4bc6b0b0b4c0e0c"
+  apiKey: "AIzaSyCyfwX4zDx47sSmvFpLwVAQQ5sCUT_GKAE",
+  authDomain: "my-quiz-project-22b37.firebaseapp.com",
+  databaseURL: "https://my-quiz-project-22b37-default-rtdb.firebaseio.com",
+  projectId: "my-quiz-project-22b37",
+  storageBucket: "my-quiz-project-22b37.appspot.com",
+  messagingSenderId: "138812203919",
+  appId: "1:138812203919:web:7c47c2041224ccd7bb61fa"
   };
+
 
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
